use ipv6 for backend, use more than one backend instance

--- a/backend/backend.ini
+++ b/backend/backend.ini
@@ -8,8 +8,8 @@ pyramid.includes =
 sqlalchemy.url = postgresql://{{backend.database_user}}:{{backend.database_password}}@localhost/{{backend.database_name}}
 
 [server:main]
-use = egg:waitress#main
-host = 127.0.0.1
+use = egg:gunicorn
+host = [::1]
 port = {{backend.port}}
 
 ###
